Change Gluttony button font-size, may be causing an issue on mobile devices.

--- a/src/responsive.css
+++ b/src/responsive.css
@@ -143,7 +143,7 @@
 
     #gluttony-button {
         word-wrap: break-word;
-        font-size: 14px;
+        /* font-size: 14px; */
     }
 
     .credits-container {
